--- a/tutorial/.settings/org.eclipse.core.resources.prefs
+++ b/tutorial/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//src/tutorialPag/PyGame.java=UTF-8
+encoding//src/tutorialPag/PythonJavaGameConversion.java=UTF-8
